feat: Added security improvements and password management
- Added JWT authentication and authorization
- Implemented password change functionality
- Added new DTOs for security features
- Updated security configuration
- Added user management service
- Added password validation service
- Updated controllers with security endpoints
- Added screenshots and documentation